--- a/json-server-version/style/index.css
+++ b/json-server-version/style/index.css
@@ -9,3 +9,15 @@ body {
     background-color: #044553;
     color: #044553;
 }
+
+.esconder {
+    display: none;
+}
+
+.btLogout {
+    border: none;
+}
+.imgPerfil {
+    max-width: 50px;
+    border-radius: 20px;
+}
