--- a/json-server-version/style/cadastroUsuario.css
+++ b/json-server-version/style/cadastroUsuario.css
@@ -1,4 +1,4 @@
-.login {
+.cadastro {
     display: flex;
     background-color: black;
     position: absolute;
@@ -15,18 +15,18 @@
     border-radius: 5vh;
 }
 
-.itensLogin {
+.itensCadastro {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: left;
 }
 
-.login input {
+.cadastro input {
     width: 100%;
 }
 
-.login button {
+.cadastro button {
     all: unset;
     margin: 10px;
     background: cyan;
@@ -36,11 +36,11 @@
     border-radius: 5px;
 }
 
-.login button:hover {
+.cadastro button:hover {
     cursor: pointer;
     background-color: #044553;
 }
-.login a {
+.cadastro a {
     all: unset;
     margin: 10px;
     background: cyan;
@@ -50,7 +50,7 @@
     border-radius: 5px;
 }
 
-.login a:hover {
+.cadastro a:hover {
     cursor: pointer;
     background-color: #044553;
 }
