--- a/json-server-version/style/perfiljogo.css
+++ b/json-server-version/style/perfiljogo.css
@@ -21,7 +21,7 @@ body {
     font-size: 2vw;
 }
 
-.gameName {
+.nomeJogo {
     color: #0dcaf0;
     text-shadow: 2px 2px black;
     font-size: 4vw;
